# ByteVampire

./: CMakeLists.txt  README.md  build.sh
src/: main.cpp  network.hpp  probe.hpp  scanner.hpp  utils.hpp
src/ai/: neural_network.cpp  neural_network.hpp
src/core/: network.cpp  network.hpp  scanner.cpp  scanner.hpp
src/exploit/: exploit_engine.cpp
src/templates/: loader.cpp  loader.hpp  template.hpp
